# bevy-rpg-game

./: Cargo.toml  events.md
assets/data/: armor.json  enemies.json  weapons.json
src/: main.rs  main.rs.old
src/components/: armor.rs  enemy.rs  grid_mappable.rs  health.rs  main_camera.rs  mod.rs  player.rs  weapon.rs
src/components/actor/: actor.rs  actor_abilities.rs  actor_move_target.rs  actor_perks.rs  actor_skills.rs  actor_stats.rs  mod.rs
src/managers/: mod.rs  scene_manager.rs
src/models/: mod.rs
src/models/enums/: game_scene.rs  game_state.rs  mod.rs  player_movement_status.rs  weapon_type.rs
src/models/events/: actor_events.rs  mod.rs
src/models/structs/: armor_definition.rs  cursor_ray.rs  enemy_definition.rs  mod.rs  weapon_definition.rs
src/models/traits/: mod.rs
src/plugins/: actor_plugin.rs  data_cache_plugin.rs  enemy_plugin.rs  events_plugins.rs  game_master_plugin.rs  mod.rs  player_plugin.rs  scene_manager_plugin.rs  state_manager_plugin.rs
src/plugins/actor_plugin/: events.rs  mod.rs  plugin.rs
src/plugins/data_cache_plugin/: mod.rs  plugin.rs  structs.rs
src/plugins/grid_system_plugin/: constants.rs  mod.rs  models.rs  plugin.rs
src/plugins/location1_scene_plugin/: mod.rs  plugin.rs  resource.rs
src/plugins/location2_scene_plugin/: mod.rs  plugin.rs  resource.rs
src/plugins/player_plugin/: enums.rs  mod.rs  plugin.rs  structs.rs
src/plugins/sandbox_scene_plugin/: mod.rs  (+1 more)
src/scenes/: location1_scene.rs  location2_scene.rs  mod.rs
src/systems/: mod.rs
src/utils/: mod.rs  rendering_resource.rs  scene_resources.rs
(+113 files in other folders)
