[package]
name = "bevy_project"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
bevy = "0.15.3"
rand = "0.9.0"
bevy_rapier3d = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
